--- a/bin/notepad2mod4.2.25.972/neard.conf
+++ b/bin/notepad2mod4.2.25.972/neard.conf
@@ -1,5 +1,5 @@
-notepad2Version = "4.2.25"
-notepad2Exe = "Notepad2.exe"
-notepad2Conf = "Notepad2.ini"
+notepad2modVersion = "4.2.25.972"
+notepad2modExe = "Notepad2.exe"
+notepad2modConf = "Notepad2.ini"
 
 bundleRelease = "@RELEASE_VERSION@"
